--- a/README.org
+++ b/README.org
@@ -104,7 +104,7 @@ This utility is licensend under the Apache license v. 2.  See the LICENSE file f
 
 This is my current TODO list for this project.  The list is dynamically added to and checked off, as I do things.  Things that are already done and committed will be removed.
 
-Here's the list [5/7]:
+Here's the list [6/8]:
  - [X] Try to remove jackson annotations and figure out if things still work, must be removed from both build dependencies and the karaf feature
    - <2017-11-17 fr 22:46> The code worked fine without jackson annotations
  - [X] Do logging for PostgreSQL connection errors
@@ -112,5 +112,8 @@ Here's the list [5/7]:
  - [X] Add database setup to the README
  - [X] Add travis CI build setup
  - [X] Make the database column values be numeric
+ - [X] Fix the timestamp
+   - <2017-11-19 sø 12:55> The parsed time was in seconds since epoch and not milliseconds since epoch, multipled the value with 1000
+ - [ ] Index the columns project_key version_is_release of the measures table
+   - <2017-11-19 sø 13:24> The reason for this, is to make the SQL queries stay fast when the number of rows grow large
  - [ ] Add ftp deploy to the travis build setup
- - [ ] Fix the timestamp
