--- a/README.org
+++ b/README.org
@@ -188,7 +188,7 @@ This utility is licensend under the Apache license v. 2.  See the LICENSE file f
 
 This is my current TODO list for this project.  The list is dynamically added to and checked off, as I do things.  Things that are already done and committed will be removed.
 
-Here's the list [8/8]:
+Here's the list [8/9]:
  - [X] Try to remove jackson annotations and figure out if things still work, must be removed from both build dependencies and the karaf feature
    - <2017-11-17 fr 22:46> The code worked fine without jackson annotations
  - [X] Do logging for PostgreSQL connection errors
@@ -203,3 +203,5 @@ Here's the list [8/8]:
    - <2017-11-19 sø 13:39> Added a Liquibase changeSet to add the indexes
  - [X] Add ftp deploy to the travis build setup
    - <2017-11-19 sø 13:48> Added a deploy script to .travis.yml
+ - [ ] Add missing fields "issues" and "complexity"
+   -
