--- a/README.org
+++ b/README.org
@@ -188,7 +188,7 @@ This utility is licensend under the Apache license v. 2.  See the LICENSE file f
 
 This is my current TODO list for this project.  The list is dynamically added to and checked off, as I do things.  Things that are already done and committed will be removed.
 
-Here's the list [8/9]:
+Here's the list [9/9]:
  - [X] Try to remove jackson annotations and figure out if things still work, must be removed from both build dependencies and the karaf feature
    - <2017-11-17 fr 22:46> The code worked fine without jackson annotations
  - [X] Do logging for PostgreSQL connection errors
@@ -203,5 +203,7 @@ Here's the list [8/9]:
    - <2017-11-19 sø 13:39> Added a Liquibase changeSet to add the indexes
  - [X] Add ftp deploy to the travis build setup
    - <2017-11-19 sø 13:48> Added a deploy script to .travis.yml
- - [ ] Add missing fields "issues" and "complexity"
-   -
+ - [X] Add missing fields "issues" and "complexity"
+   - <2017-12-16 lør. 21:30> "complexity" was added as a measure together with the others
+   - <2017-12-16 lør. 21:37> "issues" isn't an actual measure om Sonar, it's the sum of the number of bugs, the number of vulnerabilities and the number of code_smells
+   - <2017-12-16 lør. 21:39> Created a view, measures_views, which adds an "issues column" which is the sum of the existing three columns
