--- a/README.org
+++ b/README.org
@@ -22,6 +22,8 @@ The servlet has been written as a microservice that can be installed into an [[h
 
 ** How to build the application
 
+(this assumes that you have an [[https://karaf.apache.org/manual/latest/quick-start.html#_quick_start][apache karaf already installed]] on your development computer)
+
 Procedure:
  1. Clone the project
     #+BEGIN_EXAMPLE
@@ -34,8 +36,17 @@ Procedure:
       cd ~/git/sonar-collector
       mvn clean install
     #+END_EXAMPLE
+ 3. Give the following commands from the karaf console to install the REST service:
+    #+BEGIN_EXAMPLE
+      feature:repo-add mvn:no.priv.bang.sonar.sonar-collector/sonar-collector-webhook/LATEST/xml/features
+      feature:install sonar-collector-webhook
+    #+END_EXAMPLE
 
-** How to install and run the application
+/Note/: You will need to have a suitable PostgreSQL database to write to for this servlet to be meaningful.  See the sections [[Create the database]] and [[Using a database running on a different host]] for more detail.  The database just have to be a blank, freshly created database, that the servlet can write to, either on localhost with the curent user, or using JDBC credentials configured from the karaf console (this is what's covered in [[Using a database running on a different host]]).
+
+** How to install and run the application on a debian server
+
+(This procedure doesn't require development tools or building the project yourself.  The servlet, and its attached karaf feature has been deployed to maven central)
 
 This describes how to install and run the program on a debian GNU/linux system.
 
@@ -44,7 +55,7 @@ This describes how to install and run the program on a debian GNU/linux system.
 As root, do the following command:
 #+BEGIN_EXAMPLE
   apt-get update
-  apt-get postgresql install git maven openjdk-8-jdk postgresql ruby ruby-dev build-essential
+  apt-get postgresql install git maven openjdk-8-jdk postgresql
 #+END_EXAMPLE
 
 *** Create the database
@@ -65,19 +76,19 @@ Procedure:
 *** Install apache karaf
 
 Do the following steps as root
- 1. Build the debian package
+ 1. Add a key for the apt repo containing the karaf package
     #+BEGIN_EXAMPLE
-      gem install fpm
-      cd /tmp
-      git clone https://github.com/steinarb/karaf-deb-packaging
-      cd karaf-deb-packaging
-      ./dist_karaf.sh
-      mkdir -p /root/debs
-      cp *.deb /root/debs
+      wget -O - https://apt.bang.priv.no/apt_pub.gpg | apt-key add -
     #+END_EXAMPLE
- 2. Install the debian package
+ 2. Add the repo containing karaf by adding the following lines to /etc/apt/sources.list :
     #+BEGIN_EXAMPLE
-      dpkg --install /tmp/karaf-deb-packaging/karaf_4.1.2-1_all.deb
+      # APT archive for apache karaf
+      deb http://apt.bang.priv.no/public stable main
+    #+END_EXAMPLE
+ 3. Install the debian package
+    #+BEGIN_EXAMPLE
+      apt-get update
+      apt-get install karaf
     #+END_EXAMPLE
 *** Install the application in karaf
 
